Small bug in sprite subsystem was fixed

--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -18,6 +18,9 @@
 
 
 
+
+
+
   
     <meta http-equiv="content-type" content="text/html; charset=windows-1251"><title>Programmer reference</title></head><body> <big> </big>
     <div style="text-align: center;"><big>Blue game development kit: Programmer
@@ -307,7 +310,7 @@ C++
       <span style="text-decoration: underline;">Introduce to base graphics
         subsystem</span><br>
       <br>
-      Base graphics subsystem rendering game scene.<br>
+      Base graphics subsystem do rendering game scene.<br>
       <br>
       <span style="text-decoration: underline;">Render performance</span><br>
       <br>Always use latest
@@ -1547,7 +1550,7 @@ Always call <span style="font-style: italic;">prepare</span> method after load a
       <span style="font-style: italic;">Render</span> implement OPENGL render.<br>
       <span style="font-style: italic;">Rectangle</span> intend for drawing
       textured rectangle.<br>
-<span style="font-style: italic;">Coordinates</span> is base class for <span style="font-style: italic;">Rectangle</span> class.<br>
+<span style="font-style: italic;">Shape</span> is base class for <span style="font-style: italic;">Rectangle</span> class.<br>
       <span style="font-style: italic;">COM_Base</span> is base class for
       <span style="font-style: italic;">Multimedia</span> class. </big>
     <h2><a class="mozTocH2" name="mozTocId293644"></a><big>Chapter 3. Base
@@ -1603,6 +1606,12 @@ Multimedia
     <h1><a class="mozTocH1" name="mozTocId78453"></a><big>Version history</big></h1>
     <big><br>
       0.1 – Initial version.<br>
-      0.1.1 – 0.7.6 – Internal unstable builds.</big><big><br>
+      0.1.1 – 0.7.6 – Internal unstable builds.<br>
+0.7.7 </big><big>–</big><big> Small changes.<br>
+</big><big>
+0.7.8 </big><big>–</big><big> Small bug in sprite subsystem was fixed.<br>
+</big><big>
+0.7.9 </big><big>– </big><big>0.8.1 – Small changes.</big><br>
+<big>
     </big>
   </body></html>
