Fps counter was improved

--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -24,6 +24,8 @@
 
 
 
+
+
   
     <meta http-equiv="content-type" content="text/html; charset=windows-1251"><title>Programmer reference</title></head><body> <big> </big>
     <div style="text-align: center;"><big>Blue game development kit: Programmer
@@ -1613,6 +1615,8 @@ Multimedia
 0.8.2 – Sprite subsystem was improved.<br>
 0.8.3 – PCX support was removed.<br>
 0.8.4 – Small changes.<br>
+0.8.5 – Fps counter was improved.<br>
+0.8.6 – 0.8.7 – Small changes.<br>
 
 </big>
 <big>
