First stable release

--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -26,6 +26,10 @@
 
 
 
+
+
+
+
   
     <meta http-equiv="content-type" content="text/html; charset=windows-1251"><title>Programmer reference</title></head><body> <big> </big>
     <div style="text-align: center;"><big>Blue game development kit: Programmer
@@ -704,28 +708,9 @@ Always call <span style="font-style: italic;">prepare</span> method after load a
       <span style="text-decoration: underline;">Supported format</span><br>
       <br>
     </big>
-    <p><big> All loading images must have correct specification. You can see
-        list of supported format below.</big></p>
-    <big><br>
-    </big>
-    <table style="text-align: left; width: 626px; height: 94px;" border="1" cellpadding="2" cellspacing="2">
-      <tbody>
-        <tr>
-          <td style="vertical-align: top;"><big>Format </big></td>
-          <td style="vertical-align: top;"><big>Color </big></td>
-          <td style="vertical-align: top;"><big>Compression </big></td>
-          <td style="vertical-align: top;"><big>Palette </big></td>
-        </tr>
-        <tr>
-          <td style="vertical-align: top;"><big>Truevision TGA image </big></td>
-          <td style="vertical-align: top;"><big>24 bit </big></td>
-          <td style="vertical-align: top;"><big>None, RLE </big></td>
-          <td style="vertical-align: top;"><big>Not present </big></td>
-        </tr>
-        
-      </tbody>
-    </table>
-    <big><br>
+    <p><big> All loading images must have correct specification. You can load an images from 32 bit </big><big>Truevision TGA pictures.<br>
+</big></p>
+    <big>
       <span style="text-decoration: underline;">Recommend software</span><br>
       <br>
       You can use wide range of graphics software for convert you images to
@@ -1616,9 +1601,13 @@ Multimedia
 0.8.3 – PCX support was removed.<br>
 0.8.4 – Small changes.<br>
 0.8.5 – Fps counter was improved.<br>
-0.8.6 – 0.8.7 – Small changes.<br>
-
+0.8.6 – 0.8.9 – Small changes.<br>
+</big><big>
+0.9 – TGA support was improved.<br>
+0.9.1 – Small bug in sprite subsystem was fixed.<br>
+0.9.2 – Small changes.<br>
 </big>
+
 <big>
     </big>
   </body></html>
