Small bug in sprite subsystem was fixed

--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -1636,7 +1636,6 @@ C++
       <span style="font-style: italic;">Shape</span> is base class for <span style="font-style: italic;">Rectangle</span>
       class.<br>
       <span style="font-style: italic;">COM_Base</span> is base class for <span
-
         style="font-style: italic;">Multimedia</span> class. </big>
     <h2><a class="mozTocH2" name="mozTocId293644"></a><big>Chapter 3. Base
         graphics subsystem</big></h2>
@@ -1709,6 +1708,9 @@ Multimedia
       0.9.6 – 0.9.9 – Small changes.<br>
       1.0 – Base graphics subsystem was improved.<br>
       1.0.1 – 1.0.2 – Background subsystem was improved.<br>
+      1.0.3 – Small changes.<br>
+      1.0.4 – Small bug in sprite subsystem was fixed.<br>
+      1.0.5 – Small changes.<br>
     </big> <big> </big>
   </body>
 </html>
