Render performance was increased

--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -1583,8 +1583,8 @@ C++
       <span style="font-style: italic;">Render</span> implement OPENGL render.<br>
       <span style="font-style: italic;">Resizer</span> intend for calculate
       correct texture size.<br>
-      <span style="font-style: italic;">Rectangle</span> intend for resizing
-      input images.<br>
+      <span style="font-style: italic;">Rectangle</span> intend for drawing
+      textured rectangle.<br>
       <span style="font-style: italic;">Shape</span> is base class for <span style="font-style: italic;">Rectangle</span>
       class.<br>
       <span style="font-style: italic;">COM_Base</span> is base class for <span
@@ -1669,6 +1669,7 @@ Multimedia
       1.1.8 –&nbsp; 1.2.5 – Small changes.<br>
       1.2.6 – Small bug was fixed.<br>
       1.2.7 – Small changes.<br>
+      1.2.8 – Render performance was increased.<br>
     </big> <big> </big>
   </body>
 </html>
